--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
           <h2 class="hiden-index">our advantages</h2>
           <div>
             <ul class="cosmo-icon-list list">
-              <li class="cosmo-icons-item">
-                <a href="" class="cosmo-list-link">
-                  <svg class="cosmo-list-title" aria-label="antena-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna"></use>
-                  </svg>
-                </a>
-              </li>
+              <div class="cosmo-list-link">
+                <li class="cosmo-icons-item">
+                    <svg class="cosmo-list-title" aria-label="antena-icon" width="64" height="64">
+                      <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                  </a>
+                </li>
+            </div>
               <li class="cosmo-icons-item">
                 <a href="" class="cosmo-list-link">
                   <svg class="cosmo-list-title" aria-label="clock-icon" width="64" height="64">
