--- a/index.html
+++ b/index.html
@@ -51,41 +51,13 @@
       <section class="general-species-list ">
         <div class="container">
           <h2 class="hiden-index">our advantages</h2>
-          <div>
-            <ul class="cosmo-icon-list list">
-              <div class="cosmo-list-link">
-                <li class="cosmo-icons-item">
-                    <svg class="cosmo-list-title" aria-label="antena-icon" width="64" height="64">
-                      <use href="./images/icons.svg#icon-antenna"></use>
-                    </svg>
-                  </a>
-                </li>
-            </div>
-              <li class="cosmo-icons-item">
-                <a href="" class="cosmo-list-link">
-                  <svg class="cosmo-list-title" aria-label="clock-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-clock"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="cosmo-icons-item">
-                <a href="" class="cosmo-list-link">
-                  <svg class="cosmo-list-title" aria-label="icon-diagram" width="64" height="64">
-                    <use href="./images/icons.svg#icon-diagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="cosmo-icons-item">
-                <a href="" class="cosmo-list-link">
-                  <svg class="cosmo-list-title" aria-label="icon-diagram" width="64" height="64">
-                    <use href="./images/icons.svg#icon-astronaut"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
         <ul class="species list">
           <li class="species-div">
+              <div class="cosmo-icon">
+                <svg class="feature-icons " width="64" height="64"> 
+                  <use href="./images/icons.svg#icon-antenna" ></use>
+              </svg>
+              </div>
             <h3 class="species-list" >Strategy</h3>
             <p class="species-list-item">
               Our goal is to identify the business problem to walk away with the perfect and
@@ -93,6 +65,11 @@
             </p>
           </li>
           <li class="species-div">
+            <div class="cosmo-icon">
+              <svg class="feature-icons " width="64" height="64"> 
+                <use href="./images/icons.svg#icon-clock" ></use>
+            </svg>
+            </div>
             <h3 class="species-list">Punctuality</h3>
             <p class="species-list-item">
               Bring the key message to the brand's audience for the best price within the shortest
@@ -100,6 +77,11 @@
             </p>
           </li>
           <li class="species-div">
+            <div class="cosmo-icon">
+              <svg class="feature-icons " width="64" height="64"> 
+                <use href="./images/icons.svg#icon-diagram" ></use>
+            </svg>
+            </div>
             <h3 class="species-list">Diligence</h3>
             <p class="species-list-item">
               Research and confirm brands that present the strongest digital growth opportunities
@@ -107,6 +89,11 @@
             </p>
           </li>
           <li class="species-div">
+            <div class="cosmo-icon">
+              <svg class="feature-icons " width="64" height="64"> 
+                <use href="./images/icons.svg#icon-astronaut" ></use>
+            </svg>
+            </div>
             <h3 class="species-list">Technologies</h3>
             <p class="species-list-item">
               Design practice focused on digital experiences. We bring forth a deep passion for
@@ -141,36 +128,6 @@
               <div class="people-windows">
                 <h3 class="people">Mark Guerrero</h3>
               <p class="people-work">Product Designer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="twitter-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="facebook-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="linkedin-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
               </div>
             </li>
             <li class="team-list">
@@ -178,36 +135,6 @@
               <div class="people-windows">
                 <h3 class="people">Tom Ford</h3>
               <p class="people-work">Frontend Developer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="twitter-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="facebook-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="linkedin-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
               </div>
             </li>
             <li class="team-list">
@@ -215,36 +142,6 @@
               <div class="people-windows">
                 <h3 class="people">Camila Garcia</h3>
               <p class="people-work">Marketing</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="twitter-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="facebook-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="linkedin-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
               </div>
             </li>
             <li class="team-list">
@@ -252,93 +149,12 @@
               <div class="people-windows">
                 <h3 class="people">Daniel Wilson</h3>
               <p class="people-work">UI Designer</p>
-              <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="twitter-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="facebook-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link">
-                    <svg class="social-list-icon" aria-label="linkedin-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <section class="Customers-title">
-        <div class="container">
-          <h2 class="types-gen-title">Customers</h2>
-  <ul class="customers list">
-    <li class="Customers-list">
-      <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon1" width="104" heigt="56">
-          <use href="./images/icons.svg#icon-logo1"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="Customers-list">
-      <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon2" width="104" heigt="56" >
-          <use href="./images/icons.svg#icon-logo2"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="Customers-list">
-      <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon3" width="104" heigt="56">
-          <use href="./images/icons.svg#icon-logo3"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="Customers-list">
-      <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-lebel="icon4" width="104" heigt="56">
-          <use href="./images/icons.svg#icon-logo4"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="Customers-list">
-      <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon5" width="104" heigt="56">
-          <use href="./images/icons.svg#icon-logo5"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="Customers-list">
-      <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-lebel="icon6" width="104" heigt="56">
-          <use href="./images/icons.svg#icon-logo6"></use>
-        </svg>
-      </a>
-    </li>
-  
-  </ul>
-        </div>
-      </section>
     </main>
-
     <footer class="page-footer ">
       <div class="footer-top-page container">
         <a class="footer-logo logo-web link" href="./index.html"> Web<span class="logo-studio link logo-studio-footer">Studio</span> </a>      
@@ -346,39 +162,6 @@
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
-      </div>
-      <div>
-        <p class="foter-social">Social media</p>
-        <ul class="social-list list">
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="twitter-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="facebook-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="linkedin-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
       </div>
     </footer>
   </body>
