--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <ul class="species list">
             <li class="species-div">
                 <div class="cosmo-icon">
-                  <svg class="feature-icons " width="64" height="64"> 
+                  <svg class="feature-icons" width="64" height="64"> 
                     <use href="./images/icons.svg#icon-antenna" ></use>
                 </svg>
                 </div>
@@ -273,6 +273,56 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="Customers-title">
+        <div class="container">
+          <h2 class="types-gen-title">Customers</h2>
+  <ul class="customers list">
+    <li class="Customers-list">
+      <a href="" class="customers-list-link">
+        <svg class="customers-list-icon" aria-label="icon1" width="104" heigt="56">
+          <use href="./images/icons.svg#icon-logo1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="Customers-list">
+      <a href="" class="customers-list-link">
+        <svg class="customers-list-icon" aria-label="icon2" width="104" heigt="56" >
+          <use href="./images/icons.svg#icon-logo2"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="Customers-list">
+      <a href="" class="customers-list-link">
+        <svg class="customers-list-icon" aria-label="icon3" width="104" heigt="56">
+          <use href="./images/icons.svg#icon-logo3"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="Customers-list">
+      <a href="" class="customers-list-link">
+        <svg class="customers-list-icon" aria-lebel="icon4" width="104" heigt="56">
+          <use href="./images/icons.svg#icon-logo4"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="Customers-list">
+      <a href="" class="customers-list-link">
+        <svg class="customers-list-icon" aria-label="icon5" width="104" heigt="56">
+          <use href="./images/icons.svg#icon-logo5"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="Customers-list">
+      <a href="" class="customers-list-link">
+        <svg class="customers-list-icon" aria-lebel="icon6" width="104" heigt="56">
+          <use href="./images/icons.svg#icon-logo6"></use>
+        </svg>
+      </a>
+    </li>
+  
+  </ul>
         </div>
       </section>
     </main>
