--- a/index.html
+++ b/index.html
@@ -275,34 +275,34 @@
           </ul>
         </div>
       </section>
-      <section class="Customers-title">
+      <section class="customers-title">
         <div class="container">
-          <h2 class="types-gen-title">Customers</h2>
-  <ul class="customers list">
+          <h2 class="customers-title-item types-gen-title">Customers</h2>
+  <ul class="customers list link">
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon1" width="104" heigt="56">
+        <svg class="customers-list-icon" aria-label="icon1" width="104" height="56">
           <use href="./images/icons.svg#icon-logo1"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon2" width="104" heigt="56" >
+        <svg class="customers-list-icon" aria-label="icon2" width="104" height="56" >
           <use href="./images/icons.svg#icon-logo2"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon3" width="104" heigt="56">
+        <svg class="customers-list-icon" aria-label="icon3" width="104" height="56">
           <use href="./images/icons.svg#icon-logo3"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-lebel="icon4" width="104" heigt="56">
+        <svg class="customers-list-icon" aria-lebel="icon4" width="104" height="56">
           <use href="./images/icons.svg#icon-logo4"></use>
         </svg>
       </a>
@@ -326,57 +326,6 @@
         </div>
       </section>
     </main>
-    <!-- section page -->
-    <section class="Customers-title">
-      <div class="container">
-        <h2 class="types-gen-title">Customers</h2>
-<ul class="customers list">
-  <li class="Customers-list">
-    <a href="" class="customers-list-link">
-      <svg class="customers-list-icon" aria-label="icon1" width="104" heigt="56">
-        <use href="./images/icons.svg#icon-logo1"></use>
-      </svg>
-    </a>
-  </li>
-  <li class="Customers-list">
-    <a href="" class="customers-list-link">
-      <svg class="customers-list-icon" aria-label="icon2" width="104" heigt="56" >
-        <use href="./images/icons.svg#icon-logo2"></use>
-      </svg>
-    </a>
-  </li>
-  <li class="Customers-list">
-    <a href="" class="customers-list-link">
-      <svg class="customers-list-icon" aria-label="icon3" width="104" heigt="56">
-        <use href="./images/icons.svg#icon-logo3"></use>
-      </svg>
-    </a>
-  </li>
-  <li class="Customers-list">
-    <a href="" class="customers-list-link">
-      <svg class="customers-list-icon" aria-lebel="icon4" width="104" heigt="56">
-        <use href="./images/icons.svg#icon-logo4"></use>
-      </svg>
-    </a>
-  </li>
-  <li class="Customers-list">
-    <a href="" class="customers-list-link">
-      <svg class="customers-list-icon" aria-label="icon5" width="104" heigt="56">
-        <use href="./images/icons.svg#icon-logo5"></use>
-      </svg>
-    </a>
-  </li>
-  <li class="Customers-list">
-    <a href="" class="customers-list-link">
-      <svg class="customers-list-icon" aria-lebel="icon6" width="104" heigt="56">
-        <use href="./images/icons.svg#icon-logo6"></use>
-      </svg>
-    </a>
-  </li>
-
-</ul>
-      </div>
-    </section>
     <footer class="page-footer ">
       <div class="footer-top-page container">
         <a class="footer-logo logo-web link" href="./index.html"> Web<span class="logo-studio link logo-studio-footer">Studio</span> </a>      
@@ -384,39 +333,6 @@
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
-      </div>
-      <div>
-        <p class="foter-social">Social media</p>
-        <ul class="social-list list">
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="twitter-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="facebook-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon" aria-label="linkedin-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
       </div>
     </footer>
   </body>
