--- a/index.html
+++ b/index.html
@@ -339,28 +339,28 @@
           <p class="title-body-medium social-text">Social media</p>
           <ul class="social-list list social-list-footer">
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link footer-color">
                 <svg class="social-list-icon" aria-label="instagram-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link footer-color">
                 <svg class="social-list-icon" aria-label="twitter-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link footer-color">
                 <svg class="social-list-icon" aria-label="facebook-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
+              <a href="" class="social-list-link footer-color">
                 <svg class="social-list-icon" aria-label="linkedin-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
