--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   
   <body>
-    <header class="page-header">
+    <header class="page-header header">
       <div class="container pege-header-conteiner">
         <nav class="page-nav">
           <a class="logo-web header-logo link header-logo" href="./index.html"> Web<span class="logo-studio link">Studio</span> </a>
