--- a/portfolio.html
+++ b/portfolio.html
@@ -147,12 +147,49 @@
       </section>
     </main>
     <footer class="page-footer ">
-      <div class="footer-top-page container">
-        <a class="footer-logo logo-web link" href="./index.html"> Web<span class="logo-studio link logo-studio-footer">Studio</span> </a>      
-      <p class="info-footer">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="container footer-container ">
+        <div class="footer-top-page container">
+          <a class="footer-logo logo-web link" href="./index.html"> Web<span class="logo-studio link logo-studio-footer">Studio</span> </a>      
+        <p class="info-footer">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="title-body-medium social-text">Social media</p>
+          <ul class="social-list list social-list-footer">
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-color">
+                <svg class="social-list-icon" aria-label="instagram-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-color">
+                <svg class="social-list-icon" aria-label="twitter-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-color">
+                <svg class="social-list-icon" aria-label="facebook-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-color">
+                <svg class="social-list-icon" aria-label="linkedin-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      
       </div>
     </footer>
   </body>
