--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
           </ul>
           </div>
         </section>
-      </section>
       <section class="types-rob">
         <div class="types-work container">
           <h2 class="types-gen-title" >What are we doing</h2>
@@ -123,7 +122,7 @@
       <section class="piople-list">
         <div class="container">
           <h2 class="types-gen-title">Our Team</h2>
-          <ul class="team list teim-employees">
+          <ul class="team list teim-employees header">
             <li class="team-list">
               <img class="people-img" src="./images/markguerrero.jpg" alt="markg" width="264" height="260" />
               <div class="people-windows">
@@ -240,7 +239,7 @@
               <div class="people-windows">
                 <h3 class="people">Daniel Wilson</h3>
               <p class="people-work">UI Designer</p>
-              <ul class="social-list list header">
+              <ul class="social-list list">
                 <li class="social-list-item ">
                   <a href="" class="social-list-link">
                     <svg class="social-list-icon" aria-label="instagram-icon" width="16" height="16">
@@ -370,7 +369,7 @@
         </div>
       </div>
       
-      </div>
+      
     </footer>
   </body>
 </html>
