--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon5" width="104" height="56">
+        <svg class="customers-list-icon" aria-lebel="icon5" width="104" height="56">
           <use href="./images/icons.svg#icon-logo5"></use>
         </svg>
       </a>
