--- a/index.html
+++ b/index.html
@@ -280,42 +280,42 @@
   <ul class="customers list link">
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon1" width="104" height="56">
+        <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo1"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon2" width="104" height="56" >
+        <svg class="customers-list-icon" width="104" height="56" >
           <use href="./images/icons.svg#icon-logo2"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-label="icon3" width="104" height="56">
+        <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo3"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-lebel="icon4" width="104" height="56">
+        <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo4"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-lebel="icon5" width="104" height="56">
+        <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo5"></use>
         </svg>
       </a>
     </li>
     <li class="Customers-list">
       <a href="" class="customers-list-link">
-        <svg class="customers-list-icon" aria-lebel="icon6" width="104" height="56">
+        <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo6"></use>
         </svg>
       </a>
