--- a/index.html
+++ b/index.html
@@ -278,42 +278,42 @@
         <div class="container">
           <h2 class="customers-title-item types-gen-title">Customers</h2>
   <ul class="customers list link">
-    <li class="Customers-list">
+    <li class="customers-list">
       <a href="" class="customers-list-link">
         <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo1"></use>
         </svg>
       </a>
     </li>
-    <li class="Customers-list">
+    <li class="customers-list">
       <a href="" class="customers-list-link">
         <svg class="customers-list-icon" width="104" height="56" >
           <use href="./images/icons.svg#icon-logo2"></use>
         </svg>
       </a>
     </li>
-    <li class="Customers-list">
+    <li class="customers-list">
       <a href="" class="customers-list-link">
         <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo3"></use>
         </svg>
       </a>
     </li>
-    <li class="Customers-list">
+    <li class="customers-list">
       <a href="" class="customers-list-link">
         <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo4"></use>
         </svg>
       </a>
     </li>
-    <li class="Customers-list">
+    <li class="customers-list">
       <a href="" class="customers-list-link">
         <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo5"></use>
         </svg>
       </a>
     </li>
-    <li class="Customers-list">
+    <li class="customers-list">
       <a href="" class="customers-list-link">
         <svg class="customers-list-icon" width="104" height="56">
           <use href="./images/icons.svg#icon-logo6"></use>
