--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </main>
     <footer class="page-footer ">
       <div class="container footer-container ">
-        <div class="footer-top-page container">
+        <div class="footer-top-page">
           <a class="footer-logo logo-web link" href="./index.html"> Web<span class="logo-studio link logo-studio-footer">Studio</span> </a>      
         <p class="info-footer">
           Increase the flow of customers and sales for your business with digital marketing & growth
